team-app/main/default/objects/Pipeline_Review_Job__mdt/Pipeline_Review_Job__mdt.object-meta.xml
<CustomObject>
    <description>Cadence and enable flag for the single PipelineReviewScheduler slot.</description>
    <label>Pipeline Review Job</label>
    <pluralLabel>Pipeline Review Jobs</pluralLabel>
</CustomObject>