team-app/main/default/objects/Pipeline_Review_Job__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Database.executeBatch scope. Callout jobs must stay at one callout per execute.</description>
    <inlineHelpText>Job A 200, Job B/C 15 (one callout per execute).</inlineHelpText>
    <label>Batch Size</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>