team-app/main/default/objects/Pipeline_Review_Job__mdt/fields/Days_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Week__c</fullName>
    <description>Which weekdays the hourly dispatcher may enqueue this job.</description>
    <inlineHelpText>Comma list Mon,Tue,... or * for every day.</inlineHelpText>
    <label>Days Of Week</label>
    <type>Text</type>
    <length>40</length>
</CustomField>