team-app/main/default/objects/Pipeline_Review_Job__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>Disable without unscheduling.</description>
    <inlineHelpText>When false the hourly dispatcher skips this job.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>