team-app/main/default/objects/Pipeline_Review_Job__mdt/fields/Hour_ET__c.field-meta.xml
<CustomField>
    <fullName>Hour_ET__c</fullName>
    <description>Compared to America/New_York hour on the hourly tick.</description>
    <inlineHelpText>0-23 Eastern hour when this job is due.</inlineHelpText>
    <label>Hour (ET)</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>