team-app/main/default/objects/Pipeline_Review_Job__mdt/fields/Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Job_Class__c</fullName>
    <description>PipelineReviewGradeBatch, NoteBatch, SuggestionBatch, or FocusLock.</description>
    <inlineHelpText>Apex class the runner enqueues.</inlineHelpText>
    <label>Job Class</label>
    <type>Text</type>
    <length>80</length>
</CustomField>